# ChangeLog for dev-libs/openssl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.570 2014/07/28 13:43:11 ago Exp $

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p1-r2.ebuild,
  openssl-1.0.1h-r2.ebuild:
  Stable for ppc, wrt bug #512012

  26 Jul 2014; Michał Górny <mgorny@gentoo.org> openssl-1.0.1h-r3.ebuild:
  Add a note not to stabilize -r3.

*openssl-1.0.1h-r3 (25 Jul 2014)

  25 Jul 2014; Michał Górny <mgorny@gentoo.org> +openssl-1.0.1h-r3.ebuild:
  Revbump to force fix for bug #509792.

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p1-r2.ebuild,
  openssl-1.0.1h-r2.ebuild:
  Stable for x86, wrt bug #512012

*openssl-1.0.2_beta2 (23 Jul 2014)

  23 Jul 2014; Lars Wendler <polynomial-c@gentoo.org>
  -openssl-1.0.2_beta1-r2.ebuild, -openssl-1.0.2_beta1-r3.ebuild,
  +openssl-1.0.2_beta2.ebuild, -files/openssl-1.0.2-ipv6.patch,
  -files/openssl-1.0.2_beta1-perl-5.18.patch,
  +files/openssl-1.0.2_beta2-ipv6.patch,
  +files/openssl-1.0.2_beta2-revert-alpha-perl-generation.patch:
  Version bump. Removed old.

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p1-r2.ebuild,
  openssl-1.0.1h-r2.ebuild:
  Stable for amd64, wrt bug #512912

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p1-r1.ebuild,
  openssl-1.0.0m.ebuild, openssl-1.0.1h-r1.ebuild:
  Stable for sparc, wrt bug #512506

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p1-r1.ebuild,
  openssl-1.0.0m.ebuild, openssl-1.0.1h-r1.ebuild:
  Stable for ppc64, wrt bug #512506

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p1-r1.ebuild,
  openssl-1.0.0m.ebuild, openssl-1.0.1h-r1.ebuild:
  Stable for ppc, wrt bug #512506

  05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p1-r1.ebuild,
  openssl-1.0.0m.ebuild, openssl-1.0.1h-r1.ebuild:
  Stable for ia64, wrt bug #512506
