@@ -25,7 +25,6 @@ AUX openssl-1.0.2_beta2-ipv6.patch 18212 SHA256 92cd8a8713e26e569307a427d9357204
 AUX openssl-1.0.2_beta2-revert-alpha-perl-generation.patch 2452 SHA256 fe8a022836ff755bd771fc7683ceba736365f3adacdc93396d1c7d7edda032aa SHA512 f8e11bb77143cb37b1571336eeb6be721b0889b12763a685f49d9b6276520f1d92181de07c6bdad8dd0f41da389ad3fea3b8c534b2e1b13d82359d62c0ebe82f WHIRLPOOL 15da150d616c88f44d718b0fc9098e497775c776c2ad24ac46419b37cc11d541563fa2b5bd820f3affd9c036462e319a09b30594521460a1a4dc1671b1f56e97
 DIST openssl-0.9.8y.tar.gz 3785001 SHA256 bbecf13495e612936e3a9860c29c0701413564b7a964bf771a3575eaa867cee3 SHA512 cdc05067343d6b06a0d0278e90abcea9bf58439c98279ce0ce22673bf6f4a6597babcb276635c3b15cf04ec76cf53320236f5b6bbc46544a61280825f5b7b3cc WHIRLPOOL c8c9cb00f303c2d95a1d2000c74bb146fb069da9471093bf7a2c00db2a5955c2d63908b3314eb9cd12ea1e80c3bac143d3774bc27515f2ab03c5ef4d88b61612
 DIST openssl-0.9.8za.tar.gz 3787508 SHA256 cdcb98d0fbc026ca798b17919334310271d3a593554ffd6a59659b9222fd4e48 SHA512 3e16cd427bb7da4c740fa56dbee3d3e77d59bc255a474be07521354ef1db507fbd3befd35e30eaabf1c84458602bfe0ec887167604a22ae832acdcb113edb753 WHIRLPOOL 6a8f9fead39dfeb0c4e702e8395dcb6554fac03c351d31693e08a613fba3be638dcd52c5feb583b68c7729efe5adc1f5bef8deae47590183b747462fe3873c3d
-DIST openssl-1.0.0j.tar.gz 4047852 SHA256 626fb8fcb3eb7e966edbe71553ff993d137f6e8a87b05051a3695e621098b8af SHA512 9796c75b4d5de57928708f5f0a8ca01aff5b4974b60006454657ed54c34998bc54d747af03860d319db7e7a57b0cd3c267758ffaac31be2be045c977d5fc33d4 WHIRLPOOL 239f051930d9562e7266edd69cf3a1060d381a95228fd17813dd2dbf469c2cf066786b277c2fd56973b830a6b43f28934f5f15d3b6dfac8f37a6e6a65fcae455
 DIST openssl-1.0.0m.tar.gz 4054477 SHA256 224dbbfaee3ad7337665e24eab516c67446d5081379a40b2f623cf7801e672de SHA512 0a8024bcffe0bfa488aa6a8592a393017481573aac563223c171ed62e040d2fba2396a65123ba3d7287ebecd33c3c9183b1c09783121fe480c8eef8f8f938b9d WHIRLPOOL 6bab33e9b0fb25505cf94035aef5997c7c4eef29192f00abeb0ed7137114e00082bd7ffff6eb3091b19439a75fdb4a7bbb00df0192d21a21e9ff3359ce024d06
 DIST openssl-1.0.1g.tar.gz 4509047 SHA256 53cb818c3b90e507a8348f4f5eaedb05d8bfe5358aabb508b7263cc670c3e028 SHA512 66ebbad3c8ad98a07b486d39d0c3ae62b00133f8f2877cf8b97c461e7c7f40b29cf9c3cae82cf73a92dcf1daa63d33aa76c910fbcbe60158589fc7cb48f41e6d WHIRLPOOL 6bfb30d1f41b051f794e2eb80ad9116b064f6d464c22698538c4e16b85739b80744387ca160fd1a86b92814b5b1b3fc7d0658a709942b7b31b198da8cce37056
 DIST openssl-1.0.1h.tar.gz 4475692 SHA256 9d1c8a9836aa63e2c6adb684186cbd4371c9e9dcc01d6e3bb447abf2d4d3d093 SHA512 687d12ae13e364b15622f68933894050d577a4f8647bd68c7e9e86eb9d9f49cd2ebb0da3c5d3ded0a8746cf7b87e23b167b536116aa9a0402d7e7cc2ee401a92 WHIRLPOOL d453aaf24c6e2c8d9c5c76f76acfdaf8b511719fe25a4748c1681ff1d9e8a64b88249270e94900336cd110e1d7ee53a5e6d778a701967b7addb3f80c8335e5b2
@@ -35,7 +34,6 @@ EBUILD openssl-0.9.8y-r1.ebuild 4423 SHA256 fc138d6b0f9b6ffb4e7e16842a0f0b014767
 EBUILD openssl-0.9.8y.ebuild 4167 SHA256 a9e4db354867f8789bec8d021110deb0d96b6a4999cf5facc48620ff5c4fa673 SHA512 7445c77431de839e5173b79f3d4f9de700c36e88c79fa5d28be4f88c6e6cd8d7502b450aa72e4a9d7f8eabda55078ec5e01cb12df0dde52ad12f6ef04dde5af4 WHIRLPOOL 0d1359863c312e12c000418a960b98dfda5c239bca71b17e873566216ba5df076b4bec939c66821bae6988c1afd8c7503ef36a0ec4d96be65b16919cf4adce23
 EBUILD openssl-0.9.8z_p1-r1.ebuild 4284 SHA256 6ea3a606a5d3c1c8faa460cd17d0ffefcf2681fd523857d7166a66384dd5250c SHA512 56b6dadea45d761a5c8f0f2e35ab3d219d0fc3146958bf9edf81aa330e66b5d739ab0932547ac9995fe10ff845c5a9f9e524359b71b5c4f1672a0141b4ef18b5 WHIRLPOOL 4b31b5b2b633f7e6289c24f8ce79f7aa648a2bf5bc9a837ac07dc44c633707f32e3132ff5788fde6b79910c732d11a98cfe47c74ee2b0c955e439c4a83946a28
 EBUILD openssl-0.9.8z_p1-r2.ebuild 4534 SHA256 c88be117516e4f62e733399e12b66d01353d9862f6681dc945ed08660bc9f0fc SHA512 e4ee56ffad5259a09e31093eff6449d9d933eed8794f34f105efd092adf8d40a8f6cdb448119345a2e6a424e59b73f5faa9d2b2041cae153276c3de17faff772 WHIRLPOOL c823380509d339434a75d99b3eb257ce9a092c03fe790be1506d4caefa2f238020ca4fae5cedab993f7734bddffc694086dd2c49d178374835a44b5305d43894
-EBUILD openssl-1.0.0j.ebuild 7035 SHA256 8b8cf5082b7eb04abc02fe452a006dad3b2460f65b016f1a1292af79bfef9980 SHA512 e4a4adfa8fda5d514e35f67e55ee50784ae785598b5889cb5d135bb5805b42c77e42246965cfbb4168bf0c6963961dc7e418f979d26574639e8b30730bb2ddea WHIRLPOOL ad2a6e1fcd89e528acce6c0d5a19bfcc82201776bbddb00154fb915792bde6458054d6352abdfa3e1fd17d2f1409de94f9ae6596c25b9e4d87e212901817da99
 EBUILD openssl-1.0.0m.ebuild 7036 SHA256 415d1ac0e173ca4f78410a5f45aefd3e607810d0744ca91555253c87a0b476bc SHA512 b398bdb6d883295fe2d896a916fd128acc6c019e679747dd8791f02dfada1a90a53565a43e8212b07e1b031e2dd28552095e223723820dd2573305987accc5ca WHIRLPOOL b8966785828b0586f6c257e053d027259abd1f2fdcdd261a6b0a4e576972afcad92e781c37b30d0fb09f154c55e6ddfb487c437ac214daae4cf2cba5b2094c55
 EBUILD openssl-1.0.1g-r1.ebuild 8379 SHA256 f4520d3025c4d2fbff7b49e479b42a84ec7403af187330563f273408315e8374 SHA512 ea226fab681baba9e216e5b29ee5ee6171d8f5aee648e7d60a5e4c3a0d38634ae29631609e739f3b38682134e2c48d498eae6fed109ce3d57942140010135866 WHIRLPOOL 9b52b00c3d3680d792b1c836f6ee6931890ab1dda9afca0f1814d486528770769bc6b2d773a7d28599c231a4d5f370fafa4dace547879fd93579319038ae6b17
 EBUILD openssl-1.0.1g.ebuild 8184 SHA256 6cce99dde24901076936b3851efab51c2364797a91a9f8ed7e13a7f2c4cde65f SHA512 50f46c8b03e5074dffdeb99b99a5c5ba0d2614a9732cfb043e75c361246b3416155cbfc18c24464c99195a21c507a14a011b7b274c0bae729d460d8fcf583478 WHIRLPOOL b27d122249b4d2687e99d9b3a8311c87be8e30ceca3611a37fcd019fec3a4bce0555b42e0d2dfc6118410f4da4784cb51a7562ba9c3de9f79f4ff97e480d20b6
@@ -43,22 +41,16 @@ EBUILD openssl-1.0.1h-r1.ebuild 8126 SHA256 b9430778c89405661f336d28f1d019885213
 EBUILD openssl-1.0.1h-r2.ebuild 8313 SHA256 6e9eb5f037536f947e77f0cfa5e467637ebc71b313a3afc61708f50fd815f380 SHA512 6edbe02b9002cfe9f6d22e04a6ad3380c28bfdebba62a3f4757e9ceefbe9b11582eb883a69f838e94b82897254331af60a66cef9e5d48a15418e17a41ae90901 WHIRLPOOL 9e1b4907b38e3c157b671f631f6cc9a53f35eeb97e69430979bb4c16af7a60f933e00eddba4eace25a3150a1ea93c980752b13bc09b9f14064f2347bfb925ec5
 EBUILD openssl-1.0.1h-r3.ebuild 8532 SHA256 69bc9f52d2b808af643f07bbcaf3b07e5bda512191d5e274644d4a16b05181d9 SHA512 00f6af15abe99b9ecb90ed5971e312f7a1dc7751d001a80afaec2bbc1ea6379d803adced727fdbd4298d6aa1a72ae0e752d48946816927a4ccbadc71a41ed447 WHIRLPOOL 7094c824ae44ff7e49f5d76e6e98af728af5e58a88c64cdf333bbd91d2de07599ebab1c6c02e4b5f57581fa11715353c5769ca84a9d3d0308f8ad0df3ef634a4
 EBUILD openssl-1.0.2_beta2.ebuild 8286 SHA256 130ed1856f4d56b28b4d651863e2cbefda59afa13487f4dcf0700b82c050a3ee SHA512 7a23c18cf59370d456e0d0528995aa3372fdf20204172ba5aeea60857812575413d66cb9ab0b572dc07f92db759013ec11da8e402cc8668cd7d5e2789ad2e7ad WHIRLPOOL 14880c0164b7c2efa3ac15a1c0e7b8d2da3ef90454f2a9016fc3e38cd4e6179206e0bc1a5bc4bdbc0b0560fb6673dffabbbd5b061088f8acbbdf70e0b2c79b0c
-MISC ChangeLog 87415 SHA256 4f33c5fe880e9599d4332f1fa9f11e1a6193f082d6f7cc8b391892c8ee115c9c SHA512 ce31a8a2047a97c96797766ecc2046e9d648615ef3ea8be47d64dbfe46777efb341862fd891f62a29a09ba4084f9ed2c1456d0624046b38f6c04497a7bb81463 WHIRLPOOL 697d30710f7e3ef874a5030a5d09a26f11b8994483b04e807fbcc8c5e4b60cf6194a6d47194ebe31b0fcf2c831c37ae6ec30487021582ec65734b7dfeb2556bc
+MISC ChangeLog 87525 SHA256 9858d5b6681e30efec4dd16f8238ac6ddeaadd90d186a2636d04b16656208418 SHA512 02089dded3d7947eaa704d68c9ef1509e20a951d9d5319ab3a7dfab1a9fdbb7747609b6d380f099f0bbccf114fde881dd6c15ca6b95050375391c75841d8433f WHIRLPOOL e3f032fbad9056af3265f4dd5195c591d5651864bc828e4d118350a84f578075c4f52dc79a4b302ec67ea7576f316bb35b3bb89b526b36bfb3b5b26ede29bf61
 MISC metadata.xml 562 SHA256 5c61e2a07ffdb4ba157e0add7f84ff74458c890092d5e6980fd936dfdb457c34 SHA512 f83769af7ffd223923b72a62db27cbc80ca31925b95b720845b6bedd2a9b52837f70f9da93ee43e272ceb3c8424a8c9f35a31ebd5274bc04c91cd63ace1af844 WHIRLPOOL d98f2af2cf3e13c09ad526a2fe06fe8ef02e1db20fd4e3843f1793a97c9ae6a2897308c84038a9a37d6d68fadc7af6d913b980f4f079dac36ea3860a33aca8c2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT1lNxAAoJELp701BxlEWfw9EP/3rBwzu1IAaWy1twr8OlnOfb
-+nytiUXyKSTrkKra34SNjg4gLRtjcrmgsEiqA6yuDAOT7RXADBJhn3axL9PS8egv
-bHkxXCM5vdfLQ/bB1FtUoPNA16Hq5mrE7kL44fUvVw9IgxaIQV9jqTOp2wdt/6Io
-ytJHRvSyIvmZmiSOY0GOi6QWs97qqpRlZvPSCkuuF/6tEAVlyyQ/ENOB8YMoqBM9
-01lHlpcM5mDEFgC3od1RxBEXamzsxVCbbTcT6Aq0q4PjvIoWKkCCvogdorpq+0zG
-XhAwVBWThHl8Gj3Pr7OT7b/kGMJDEgnQFhyPhg+KI7v6T5Wyze9z4L+fXgizn2P/
-4L8+h8ijmFtvfxphwI4QwuXvLyGsHEAXmAkj1t1YuJ3GswvTAev0FdClyCWd7MwE
-/Ut0QcFNYsenpM19V44WE60nEDixHCbZh2tcp78/IMmx3+lFlL9pDh3EO4w8w4ac
-hhYl2RQnFy4UVj0s5dtPFOcsWJFzzwqhtK4k+hCPMC7T7KUQiruJdCcmUHs2qgeE
-klvvDXCpomulHJ7u4e28vzTJdya5MkjB+htBjrbULZgvFZ8V60PzTvPgCQYzD84Y
-WL5NRpDz5Ml+RcOzqfb7Kkt8+vrlOheJSTN10vE87sqPFvdCb9IouoJCZbKJDKn/
-og6AoEsvwuTAiq4CgiMH
-=YgU4
+iQEcBAEBCAAGBQJT117GAAoJECo/aRed9267c/cH/RGCympeo9NpCBcxYLl+WSr+
+VQEax2dRByfkI6WVwa67gzaOk++UA46lKbPWReK6L2JO9jGzraqxbDVhY//B39nj
+7NODYFxqPYIgX+MVNWIrw9xZ5QOuuAA/6B65ZMxgk6Z6NMXRfpgb1WA/OmrmDaC1
+5L05TjreOZL4cSDg4Nl8IckMLVDy1WpoSeP0fPU8+t5/6/GQUgLsaau4kzW87lyZ
+KipNKMX4CXNepSc2S3IMQoicrwfNFft2NHUyLTmrauZdQTNfQeFDQf816M3/75Yt
+7LGbDQdqjskNcI1Vi29ZGqEOwz2L+3vMSm4JDou7hdKSJxTHEFbgzS2r7Qizt4s=
+=omdG
 -----END PGP SIGNATURE-----
