@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install postinst preinst prepare test unpack
-DEPEND=static-libs? ( gmp? ( dev-libs/gmp[static-libs(+)] ) zlib? ( sys-libs/zlib[static-libs(+)] ) kerberos? ( app-crypt/mit-krb5 ) ) !static-libs? ( gmp? ( dev-libs/gmp ) zlib? ( sys-libs/zlib ) kerberos? ( app-crypt/mit-krb5 ) ) sys-apps/diffutils >=dev-lang/perl-5 test? ( sys-devel/bc )
-DESCRIPTION=full-strength general purpose cryptography library (including SSL v2/v3 and TLS v1)
-EAPI=4
-HOMEPAGE=http://www.openssl.org/
-IUSE=bindist gmp kerberos rfc3779 sse2 static-libs test zlib
-KEYWORDS=alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~sparc-fbsd ~x86-fbsd
-LICENSE=openssl
-PDEPEND=app-misc/ca-certificates
-RDEPEND=static-libs? ( gmp? ( dev-libs/gmp[static-libs(+)] ) zlib? ( sys-libs/zlib[static-libs(+)] ) kerberos? ( app-crypt/mit-krb5 ) ) !static-libs? ( gmp? ( dev-libs/gmp ) zlib? ( sys-libs/zlib ) kerberos? ( app-crypt/mit-krb5 ) )
-SLOT=0
-SRC_URI=mirror://openssl/source/openssl-1.0.0j.tar.gz http://cvs.pld-linux.org/cgi-bin/cvsweb.cgi/packages/openssl/openssl-c_rehash.sh?rev=1.7 -> openssl-c_rehash.sh.1.7
-_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=7dd2374160d12599071a6f7000716fee
