@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9267 2014/07/29 05:24:01 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9268 2014/07/29 08:44:46 pinkbyte Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  29 Jul 2014; Sergey Popov <pinkbyte@gentoo.org> package.mask:
+  Drop obsolete security mask on dev-libs/openssl
 
   29 Jul 2014; Patrick Lauer <patrick@gentoo.org> package.mask:
   Remove util-vserver mask as it builds again
