@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/openssl
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.570 2014/07/28 13:43:11 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.571 2014/07/29 08:43:37 pinkbyte Exp $
+
+  29 Jul 2014; Sergey Popov <pinkbyte@gentoo.org> -openssl-1.0.0j.ebuild:
+  Drop old vulnerable version
 
   28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p1-r2.ebuild,
   openssl-1.0.1h-r2.ebuild:
